# gaia-auth

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md  compose.yaml  query.sql
migrations/: 20241222230334_create_table_users.down.sql  20241222230334_create_table_users.up.sql
src/: main.rs
src/controller/: auth_controller.rs  errors.rs  group_controller.rs  mod.rs  profile.rs  user_controller.rs
src/model/: group.rs  mod.rs  security.rs  user.rs
src/repository/: group_repository.rs  mod.rs  repository.rs  user_repository.rs
src/security/: jwt.rs  mod.rs  password.rs
