[package]
name = "gaia-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
hex = "0.4.3"
jsonwebtoken = "9.3.0"
rust-argon2 = "2.1.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.134", features = ["raw_value"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls", "derive", "json", "uuid"] }
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["serde"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3